# if-changed

./: .gitignore  .pre-commit-hooks.yaml  BUILD  CHANGELOG.md  Cargo.toml  README.md  SPECIFICATION.md  build.rs  checker.rs  deny.toml  engine.rs  if-changed.rs  parser.rs  testing.rs
.github/: release-please-config.json  renovate.json
.github/workflows/: ci.yaml  ci.yml  publish.yaml  release-notes.yml  release.yml
engine/: git.rs
engine/snapshots/: if_changed__engine__git__tests__basic_pathspec.snap  if_changed__engine__git__tests__multiple_pathspec.snap  if_changed__engine__git__tests__multiple_pathspec_with_comment.snap  if_changed__engine__git__tests__multiple_pathspec_with_empty_comment.snap
snapshots/: if_changed__parser__tests__it_parses.snap  if_changed__parser__tests__it_parses_empty_files.snap  if_changed__parser__tests__it_parses_empty_path_with_name.snap  if_changed__parser__tests__it_parses_inline_blocks.snap  if_changed__parser__tests__it_parses_multiline_comments.snap  if_changed__parser__tests__it_parses_multiple_paths_inline.snap  if_changed__parser__tests__it_parses_multiple_paths_multiline.snap
