[package]
name = "if-changed"
version = "0.3.1"
edition = "2021"
description = "A pre-submit for file changes."
license = "MIT OR Apache-2.0"
authors = ["Mathematic Inc"]
repository = "https://github.com/mathematic-inc/if-changed"
categories = ["command-line-utilities", "development-tools", "filesystem"]
keywords = ["change", "git", "presubmit", "pre-submit"]

[lib]
path = "if-changed.rs"

[[bin]]
name = "if-changed"
path = "bin/if-changed.rs"

[dependencies]
bstr = "1.9.1"
clap = { version = "4.5.4", features = ["derive", "env"] }
genawaiter = "0.99.1"
git2 = "0.18.3"

[dev-dependencies]
tempfile = "3.10.1"
insta = { version = "1.38", features = ["json"] }
serde = { version = "1.0.199", features = ["derive"] }
indoc = "2.0.5"
