[package]
name = "if-changed"
version = "0.3.6"
edition = "2021"
description = "A pre-submit for file changes."
license = "Apache-2.0"
authors = ["Mathematic Inc"]
repository = "https://github.com/mathematic-inc/if-changed"
categories = ["command-line-utilities", "development-tools", "filesystem"]
keywords = ["git", "presubmit", "pre-submit", "ci", "hooks"]

[lib]
path = "if-changed.rs"

[[bin]]
name = "if-changed"
path = "bin/if-changed.rs"

[dependencies]
bstr = "1.12.3"
clap = { version = "4.6.1", features = ["derive", "env"] }
genawaiter = "0.99.1"
git2 = "0.21.0"

[dev-dependencies]
tempfile = "3.27.0"
insta = { version = "1.48", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
indoc = "2.0.7"
